# mmmm

./: meson.build
src/: main.c
src/codegen/: codegen.c  codegen.h
src/common/: arena.c  arena.h  common.c  common.h  error.c  error.h  kvmap.c  kvmap.h
src/frontend/: ast.h  ast_debug.c  ir_gen.c  lexer.c  lexer.h  parser.c  parser.h  passes.h  token.h
src/ir/: ssa.c  ssa.h  ssa_class.h
